--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -183,7 +183,7 @@ body.dark {
 }
 
 .ios body.dark ion-modal {
-  --ion-background-color: var(--ion-color-step-100);
+  --ion-background-color: #000000;
   --ion-toolbar-background: var(--ion-color-step-150);
   --ion-toolbar-border-color: var(--ion-color-step-250);
 }
